# mc-ns-data-pipeline

./: README.md  pyproject.toml
Assets/: README.md
mastercontrol_etl/: .env.example  bulk_load.py
mastercontrol_pipeline/data_fetch_system/: README.md  api_client.py  bulk_fetch.py  checkpoint_manager.py  config.py  data_processor.py  incremental_fetch.py  status_tracker.py  utils.py
mastercontrol_pipeline/data_load_system/: data_load.py
mastercontrol_pipeline/data_load_system/config/: settings.py
mastercontrol_pipeline/data_load_system/database/: connection.py  operations.py
mastercontrol_pipeline/data_load_system/processors/: bulk_loader.py  file_processor.py
mastercontrol_pipeline/data_load_system/sql/: queries.py  schema.py
mastercontrol_pipeline/data_load_system/utils/: file_utils.py  reporting.py
netsuite_pipeline/: inventory_data.py  sales_data.py
